; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/solaris/local/extr_2360.c_add_env.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/solaris/local/extr_2360.c_add_env.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@env = common dso_local global i8** null, align 8
@env_pos = common dso_local global i64 0, align 8
@env_len = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @add_env(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %12, label %7

7:                                                ; preds = %1
  %8 = load i8**, i8*** @env, align 8
  %9 = load i64, i64* @env_pos, align 8
  %10 = getelementptr inbounds i8*, i8** %8, i64 %9
  store i8* null, i8** %10, align 8
  %11 = load i32, i32* @env_len, align 4
  store i32 %11, i32* %2, align 4
  br label %57

12:                                               ; preds = %1
  %13 = load i8*, i8** %3, align 8
  %14 = load i8**, i8*** @env, align 8
  %15 = load i64, i64* @env_pos, align 8
  %16 = getelementptr inbounds i8*, i8** %14, i64 %15
  store i8* %13, i8** %16, align 8
  %17 = load i8*, i8** %3, align 8
  %18 = call i32 @strlen(i8* %17)
  %19 = add nsw i32 %18, 1
  %20 = load i32, i32* @env_len, align 4
  %21 = add nsw i32 %20, %19
  store i32 %21, i32* @env_len, align 4
  %22 = load i64, i64* @env_pos, align 8
  %23 = add i64 %22, 1
  store i64 %23, i64* @env_pos, align 8
  %24 = load i8*, i8** %3, align 8
  %25 = call i32 @strlen(i8* %24)
  %26 = add nsw i32 %25, 1
  %27 = srem i32 %26, 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %55

29:                                               ; preds = %12
  store i32 0, i32* %4, align 4
  br label %30

30:                                               ; preds = %49, %29
  %31 = load i32, i32* %4, align 4
  %32 = load i8*, i8** %3, align 8
  %33 = call i32 @strlen(i8* %32)
  %34 = add nsw i32 %33, 1
  %35 = srem i32 %34, 4
  %36 = sub nsw i32 4, %35
  %37 = icmp slt i32 %31, %36
  br i1 %37, label %38, label %54

38:                                               ; preds = %30
  %39 = load i8*, i8** %3, align 8
  %40 = load i8*, i8** %3, align 8
  %41 = call i32 @strlen(i8* %40)
  %42 = sext i32 %41 to i64
  %43 = getelementptr inbounds i8, i8* %39, i64 %42
  %44 = load i8**, i8*** @env, align 8
  %45 = load i64, i64* @env_pos, align 8
  %46 = getelementptr inbounds i8*, i8** %44, i64 %45
  store i8* %43, i8** %46, align 8
  %47 = load i32, i32* @env_len, align 4
  %48 = add nsw i32 %47, 1
  store i32 %48, i32* @env_len, align 4
  br label %49

49:                                               ; preds = %38
  %50 = load i32, i32* %4, align 4
  %51 = add nsw i32 %50, 1
  store i32 %51, i32* %4, align 4
  %52 = load i64, i64* @env_pos, align 8
  %53 = add i64 %52, 1
  store i64 %53, i64* @env_pos, align 8
  br label %30

54:                                               ; preds = %30
  br label %55

55:                                               ; preds = %54, %12
  %56 = load i32, i32* @env_len, align 4
  store i32 %56, i32* %2, align 4
  br label %57

57:                                               ; preds = %55, %7
  %58 = load i32, i32* %2, align 4
  ret i32 %58
}

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
